--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,7 +5,15 @@
             30
         </session-timeout>
     </session-config>
-<!-- Disable custom error page
+<!--
+    <resource-ref>
+      <description>DB Connection</description>
+      <res-ref-name>jdbc/gestClub</res-ref-name>
+      <res-type>javax.sql.DataSource</res-type>
+      <res-auth>Container</res-auth>
+  </resource-ref>
+-->
+  <!-- Disable custom error page
     <error-page>
         <location>/error.jsp</location>
     </error-page>
