Added jetty support for running from command line

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,16 @@
 
     <build>
         <plugins>
+		  <plugin>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-maven-plugin</artifactId>
+			<version>9.3.12.v20160915</version>
+			<configuration>
+				<webApp>
+					<contextPath>/daw</contextPath>
+				</webApp>
+			</configuration>
+		  </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
