--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
 
     <build>
         <plugins>
+       <plugin>                                                                                               
+          <groupId>org.apache.tomcat.maven</groupId>                                                          
+          <artifactId>tomcat7-maven-plugin</artifactId>                                                       
+          <version>2.2</version>                                                                              
+        </plugin>    
 		  <plugin>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-maven-plugin</artifactId>
