--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,8 @@
         </dependency>
         <dependency>
             <groupId>org.apache.derby</groupId>
-            <artifactId>derbyclient</artifactId>
-            <version>10.12.1.1</version>
+            <artifactId>derby</artifactId>
+            <version>10.13.1.1</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
