--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,38 @@
             30
         </session-timeout>
     </session-config>
+
+<!-- Realm Access Rules -->
+    <security-constraint>
+        <display-name>CLIENTE</display-name>
+        <web-resource-collection>
+            <web-resource-name>cliente</web-resource-name>
+            <url-pattern>/clientes/*</url-pattern>
+        </web-resource-collection>
+<!--  Remove comments to enable authentication&authorization
+        <auth-constraint>
+            <role-name>USUARIOS</role-name>
+            <role-name>ADMINISTRADORES</role-name>
+        </auth-constraint>
+-->
+  </security-constraint>
+    <login-config>
+        <auth-method>FORM</auth-method>
+        <realm-name>file</realm-name>
+        <form-login-config>
+            <form-login-page>/WEB-INF/login.jsp</form-login-page>
+            <form-error-page>/WEB-INF/login.jsp</form-error-page>
+        </form-login-config>
+    </login-config>
+    <security-role>
+        <description/>
+        <role-name>USUARIOS</role-name>
+    </security-role>
+    <security-role>
+        <description/>
+        <role-name>ADMINISTRADORES</role-name>
+    </security-role>
+        
 <!--
     <resource-ref>
       <description>DB Connection</description>
@@ -18,4 +50,5 @@
         <location>/error.jsp</location>
     </error-page>
 -->
+
 </web-app>
