--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -26,7 +26,7 @@
         <realm-name>file</realm-name>
         <form-login-config>
             <form-login-page>/WEB-INF/login.jsp</form-login-page>
-            <form-error-page>/WEB-INF/login.jsp?error</form-error-page>
+            <form-error-page>/WEB-INF/login.jsp?error=true</form-error-page>
         </form-login-config>
     </login-config>
     <security-role>
