--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,22 +6,36 @@
         </session-timeout>
     </session-config>
 
-<!-- Realm Access Rules -->
-<!--  Remove comments to enable authentication&authorizatio -->        
-<!--
-    <security-constraint>
-        <display-name>CLIENTE</display-name>
-        <web-resource-collection>
-            <web-resource-name>cliente</web-resource-name>
-            <url-pattern>/clientes/*</url-pattern>
-        </web-resource-collection>
-        <auth-constraint>
-            <role-name>USUARIOS</role-name>
-            <role-name>ADMINISTRADORES</role-name>
-        </auth-constraint>
-  </security-constraint>
--->
-  <login-config>
+    <!-- Creation of Datasource in Application Server -->
+
+    <data-source>
+        <name>java:app/jdbc/gestClub</name>
+        <class-name>org.apache.derby.jdbc.ClientDataSource</class-name>                
+        <database-name>club</database-name>
+        <user>dawuser1</user>
+        <password>dawuser1</password>                                
+        <initial-pool-size>2</initial-pool-size>
+        <max-pool-size>10</max-pool-size>
+        <min-pool-size>5</min-pool-size>
+    </data-source>
+
+
+    <!-- Realm Access Rules -->
+    <!--  Remove comments to enable authentication&authorizatio -->        
+    <!--
+        <security-constraint>
+            <display-name>CLIENTE</display-name>
+            <web-resource-collection>
+                <web-resource-name>cliente</web-resource-name>
+                <url-pattern>/clientes/*</url-pattern>
+            </web-resource-collection>
+            <auth-constraint>
+                <role-name>USUARIOS</role-name>
+                <role-name>ADMINISTRADORES</role-name>
+            </auth-constraint>
+      </security-constraint>
+    -->
+    <login-config>
         <auth-method>FORM</auth-method>
         <realm-name>file</realm-name>
         <form-login-config>
@@ -38,18 +52,18 @@
         <role-name>ADMINISTRADORES</role-name>
     </security-role>
         
-<!--
-    <resource-ref>
-      <description>DB Connection</description>
-      <res-ref-name>jdbc/gestClub</res-ref-name>
-      <res-type>javax.sql.DataSource</res-type>
-      <res-auth>Container</res-auth>
-  </resource-ref>
--->  
-<!-- Disable custom error page
-    <error-page>
-        <location>/error.jsp</location>
-    </error-page>
--->
+    <!--
+        <resource-ref>
+          <description>DB Connection</description>
+          <res-ref-name>jdbc/gestClub</res-ref-name>
+          <res-type>javax.sql.DataSource</res-type>
+          <res-auth>Container</res-auth>
+      </resource-ref>
+    -->  
+    <!-- Disable custom error page
+        <error-page>
+            <location>/error.jsp</location>
+        </error-page>
+    -->
 
 </web-app>
